+ generated JavaDoc + added Engine classes (Engine, FixStepEngine) + added OGL renderer context (EngineView, EngineRenderer) * added comments to some classes + added new modifier classes to Node + added TouchController to handle gestures touch and taps * HashMaps changed to SparseArrays and SparseIntArrays * modified AnimatedSprite to never allocate memory while engine is running * instead of using textureId in Sprite class, now changed to Texture * some default function name changed to "onFunctionName" * added remove method to Library and Directory classes * added static functions to Vector and Matrix classes to never allocate memory * MathHelper renamed to Math